--- a/src/styles/base/tables.less
+++ b/src/styles/base/tables.less
@@ -9,6 +9,7 @@
         empty-cells: show;
         word-wrap: break-word; // for CSS3 browsers
         text-align: left;
+        max-width: 100%;
         width: 100%;
     }
 
