--- a/src/styles/objects/animate.less
+++ b/src/styles/objects/animate.less
@@ -7,6 +7,7 @@
         animation-duration: 1000ms;
         animation-fill-mode: both;
         transform: translateZ(0); // Improve performance on mobile/tablet devices
+        will-change: transform, opacity;
     }
 
     .animated--loop {
