--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -188,11 +188,14 @@
 
 // Code
 @code-font-size:                12px;
-@code-color:                    @color-danger;
+@code-color:                    @color-secondary;
 @code-background:               @grey-25;
-@code-padding:                  1px 2px 2px;
-@pre-color:                     @color-danger;
-@pre-background:                @grey-25;
+@code-border-color:             @grey-100;
+@code-border-radius:            @border-radius-small;
+@code-padding:                  .25em .5em;
+@pre-color:                     @grey-800;
+@pre-background:                @grey-50;
+@pre-padding:                   @spacing-half @spacing-two-thirds;
 
 // Blockquote
 @blockquote-padding:           @spacing-third @spacing-two-thirds;
@@ -331,14 +334,14 @@
 
 @table-font-size:               14px;
 @table-background:              transparent;
-@table-caption-padding-bottom:  @spacing-half;
+@table-caption-padding:         0 0 @spacing-half;
 @table-headfoot-color:          @grey-800;
 @table-headfoot-font-weight:    700;
-@table-headfoot-background:     transparent;
-@table-cell-padding:            @spacing-half;
+@table-cell-padding:            @spacing-half @spacing-fifth;
 @table-border-width:            1px;
 @table-border-color:            @grey-100;
 @table-stripe-background:       @grey-25;
+@table-higlight-background:     @grey-50;
 
 
 // TOOLTIPS
@@ -382,9 +385,9 @@
 @icon-font-size:                @base-font-size;
 
 // Border-radius
-@border-radius-small:           2px;
-@border-radius-default:         4px;
-@border-radius-large:           8px;
+@border-radius-small:           3px;
+@border-radius-default:         6px;
+@border-radius-large:           9px;
 
 // Box-shadow
 @box-shadow-small:              0 2px 4px rgba(0,0,0,.05);
