--- a/src/styles/objects/table-styles.less
+++ b/src/styles/objects/table-styles.less
@@ -53,6 +53,10 @@
             }
         }
 
+        &.table--bordered {
+            border: @table-border-width solid @table-border-color;
+        }
+
         &.table--highlight {
             tbody {
                 tr {
